--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.9",
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/test-utils": "^3.19.1",
-    "@nuxt/ui": "^3.1.3",
+    "@picocss/pico": "^2.1.1",
+    "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.8.2",
     "eslint": "^9.28.0",
     "nuxt": "^3.17.5",
     "vue": "^3.5.16",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.64"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.1"
   }
 }
